# univesityDb

./: .gitignore  CMakeLists.txt  README.md  req.md
include/: Database.hpp  FileHandler.hpp  Gender.hpp  PeselChecker.hpp  Student.hpp  Utils.hpp  database.hpp  student.hpp
include/Logger/: Printer.hpp
src/: Database.cpp  FileHandler.cpp  Gender.h  PeselChecker.cpp  Student.cpp  Utils.cpp  database.cpp  database.hpp  main.cpp  student.cpp  student.hpp  ut.cpp
uts/: Database_tests.cpp  FileHandler_tests.cpp  Pesel_tests.cpp  pesel_tests.cpp  ut.cpp
uts/mocks/: FileHandlerMock.hpp
